Fix content iframe sizing on iOS
Work around http://stackoverflow.com/questions/23083462#23123845

--- a/bootstrap.css
+++ b/bootstrap.css
@@ -25,7 +25,8 @@ html, body {
 iframe#content {
 	position: absolute;
 	top: 0;
-	width: 100%;
+	width: 1px;
+	min-width: 100%;
 	height: 100%;
 	border: 0;
 }
